--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.10.0",
     "localforage": "^1.10.0",
@@ -20,7 +19,9 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.7"
   },
